@@ -11,7 +11,7 @@ import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
-import java.security.Key;
+import java.security.MessageDigest;
 import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Flow;
@@ -23,8 +23,6 @@ import java.util.logging.Logger;
 
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
 
 import com.ak.comm.converter.Converter;
 import com.ak.comm.converter.Variable;
@@ -61,22 +59,20 @@ final class FileReadingService<T, R, V extends Enum<V> & Variable<V>>
 
       LOCK.lock();
       try (SeekableByteChannel seekableByteChannel = Files.newByteChannel(fileToRead, StandardOpenOption.READ)) {
-        Logger.getLogger(getClass().getName()).log(Level.CONFIG, () -> String.format("#%x Open file [ %s ]", hashCode(), fileToRead));
+        Logger.getLogger(getClass().getName()).log(Level.CONFIG, () -> "#%x Open file [ %s ]".formatted(hashCode(), fileToRead));
 
-        Mac mac = Mac.getInstance("HmacMD5");
-        Key key = new SecretKeySpec("2020.01".getBytes(Charset.defaultCharset()), "RawBytes");
-        mac.init(key);
-        if (isChannelProcessed(seekableByteChannel, mac::update)) {
-          String md5Code = digestToString(mac.doFinal());
+        MessageDigest md = MessageDigest.getInstance("SHA-512");
+        if (isChannelProcessed(seekableByteChannel, md::update)) {
+          String md5Code = digestToString(md.digest("2020.11.07".getBytes(Charset.defaultCharset())));
           Path convertedFile = LogBuilders.CONVERTER_FILE.build(md5Code).getPath();
           if (Files.exists(convertedFile, LinkOption.NOFOLLOW_LINKS)) {
             convertedFileChannelProvider = () -> AsynchronousFileChannel.open(convertedFile, StandardOpenOption.READ);
             Logger.getLogger(getClass().getName()).log(Level.INFO,
-                () -> String.format("#%x File [ %s ] with hash = [ %s ] is already processed", hashCode(), fileToRead, md5Code));
+                () -> "#%x File [ %s ] with hash = [ %s ] is already processed".formatted(hashCode(), fileToRead, md5Code));
           }
           else {
             Logger.getLogger(getClass().getName()).log(Level.INFO,
-                () -> String.format("#%x Read file [ %s ], hash = [ %s ]", hashCode(), fileToRead, md5Code));
+                () -> "#%x Read file [ %s ], hash = [ %s ]".formatted(hashCode(), fileToRead, md5Code));
             Path tempConverterFile = LogBuilders.CONVERTER_FILE.build("temp." + md5Code).getPath();
             convertedFileChannelProvider = () -> AsynchronousFileChannel.open(tempConverterFile,
                 StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.READ, StandardOpenOption.TRUNCATE_EXISTING);
@@ -121,13 +117,13 @@ final class FileReadingService<T, R, V extends Enum<V> & Variable<V>>
       }
     }
     else {
-      Logger.getLogger(getClass().getName()).log(LOG_LEVEL_ERRORS, () -> String.format("File [ %s ] is not a regular file", fileToRead));
+      Logger.getLogger(getClass().getName()).log(LOG_LEVEL_ERRORS, () -> "File [ %s ] is not a regular file".formatted(fileToRead));
     }
   }
 
   @Override
   public String toString() {
-    return String.format("%s@%x{file = %s}", getClass().getSimpleName(), hashCode(), fileToRead);
+    return "%s@%x{file = %s}".formatted(getClass().getSimpleName(), hashCode(), fileToRead);
   }
 
   @Override
@@ -151,6 +147,11 @@ final class FileReadingService<T, R, V extends Enum<V> & Variable<V>>
   }
 
   @Override
+  public void refresh() {
+    LogBuilders.CONVERTER_FILE.clean();
+  }
+
+  @Override
   public AsynchronousFileChannel call() throws Exception {
     return convertedFileChannelProvider.call();
   }
@@ -171,8 +172,8 @@ final class FileReadingService<T, R, V extends Enum<V> & Variable<V>>
   private static String digestToString(@Nonnull byte[] digest) {
     StringBuilder sb = new StringBuilder(digest.length * 2);
     for (byte b : digest) {
-      sb.append(String.format("%x", b));
+      sb.append("%x".formatted(b));
     }
-    return sb.toString();
+    return sb.substring(0, sb.length() / 4);
   }
 }
