@@ -10,7 +10,7 @@ public enum RcmCoefficients {
     @Override
     public Coefficients of(int channelNumber) {
       return object -> object.getJsonObject("Current-carrying electrodes, Ohm : ADC[Channel-1, Channel-2]").entrySet().stream()
-          .map(entry -> String.format("%s\t%s", entry.getValue().asJsonArray().getInt(channelNumber - 1), entry.getKey()))
+          .map(entry -> "%d\t%s".formatted(entry.getValue().asJsonArray().getInt(channelNumber - 1), entry.getKey()))
           .collect(Collectors.joining(Strings.NEW_LINE));
     }
   },
@@ -18,9 +18,9 @@ public enum RcmCoefficients {
     @Override
     public Coefficients of(int channelNumber) {
       return object -> {
-        String channel = String.format("Channel-%s", channelNumber);
+        String channel = "Channel-%d".formatted(channelNumber);
         return object.getJsonObject("Rheo 0.26 Ohm : ADC{CurrentCarrying, Rheo}").getJsonObject(channel).entrySet().stream()
-            .map(entry -> String.format("%s\t%s", entry.getKey(), entry.getValue()))
+            .map(entry -> String.join(Strings.TAB, entry.getKey(), entry.getValue().toString()))
             .collect(Collectors.joining(Strings.NEW_LINE));
       };
     }
